force-app/main/default/objects/LLC_BI__Application__c/LLC_BI__Application__c.object-meta.xml
<CustomObject>
    <description>The Application object is used to capture entry details about a relationship&apos;s business (loans and deposits) with the financial institution. The object is primarily used in the nCino SBA Package.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>Application-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>