force-app/main/default/objects/LLC_BI__Application__c/fields/Application_Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Completion_Date_Time__c</fullName>
    <label>Application Completion Date/Time</label>
    <type>DateTime</type>
</CustomField>