force-app/main/default/objects/LLC_BI__Application__c/fields/cm_Primary_Deposit_Booked__c.field-meta.xml
<CustomField>
    <fullName>cm_Primary_Deposit_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a deposit flagged as primary has completed its book to core transaction, this flag is set to true to trigger any ancillary deposit products in the application bundle to book.  Do not manually edit this field.</description>
    <inlineHelpText>When a deposit flagged as primary has completed its book to core transaction, this flag is set to true to trigger any ancillary deposit products in the application bundle to book.  Do not manually edit this field.</inlineHelpText>
    <label>Primary Deposit Booked?(Online DAO Only)</label>
    <type>Checkbox</type>
</CustomField>