force-app/main/default/objects/LLC_BI__Application__c/fields/LLC_BI__Application_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Application_Completion_Date__c</fullName>
    <description>Application Completed Date is a user input field that captures the date at which an application is considered complete.</description>
    <label>Application Completion Date</label>
    <type>Date</type>
</CustomField>