force-app/main/default/objects/LLC_BI__Application__c/fields/nPortal__Applicant__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User submitting the application</description>
    <label>Applicant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>