force-app/main/default/objects/LLC_BI__Application__c/fields/nPortal__Artifact_Id__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Artifact_Id__c</fullName>
    <description>This String holds the Id of the type of application which is getting created (i.e. Loan, Deposit, Treasury)</description>
    <inlineHelpText>This ID should match the artifact being created by the application</inlineHelpText>
    <label>Artifact Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>