force-app/main/default/objects/LLC_BI__Application__c/fields/nPortal__OA_Auto_Decision_Complete__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Auto_Decision_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field is automatically selected when auto decision is complete.</description>
    <label>OA Auto Decision Complete</label>
    <type>Checkbox</type>
</CustomField>