force-app/main/default/objects/LLC_BI__Application__c/fields/nPortal__Product__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Product__c</fullName>
    <description>The ID of the Product or Product type for the online application</description>
    <label>Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>