force-app/main/default/objects/LLC_BI__Application__c/fields/nPortal__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the product package associated to the artifact (such as a loan or deposit) being created by this application.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>