force-app/main/default/objects/LLC_BI__Application__c/fields/nPortal__Session__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>--DEPRECATED-- The Session saved for the Application. This field has been moved to a junction object called Context which maps applications to Users and Sessions along with a particular Context Type name.</description>
    <label>-D Session</label>
    <referenceTo>nFORCE__Session__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>